Adding support for group properties in Component::CreateObject()

The QScriptValue overload for Component::CreateObject() should be able
to set group properties. This change also allows for property
binding from Javascript to continue to function.

Task-number: QTBUG-13087
Reviewed-by: Bea Lam